initial contents added

--- a/WhatISTinkerhub/intro.html
+++ b/WhatISTinkerhub/intro.html
@@ -2,10 +2,24 @@
 <html lang="en">
 <head>
     <title>whatistinkerhub</title>
+    <style>
+        .root{
+            background-color: rgb(184, 192, 170);
+            width: 100%;
+            height: 100%;
+            padding-bottom: 20px;
+           }
+    </style>
+    <link rel="stylesheet" href="intro.css">
 </head>
-<body>
-    <div>
-        
+<body bgcolor="lightgray">
+    <div class="root">
+        <div class="body">
+            <h1>Hai Folks welcome to Tinkerhub AWH Chapter</h1>
+        </div>
+        <h1>Tinkerhub</h1>
+        <p>We are a community of tinkerers, makers, policy geeks & students and are working towards
+             mapping and empowering people who share a passion to innovate</p>
     </div>
 </body>
 </html>
