some names renamed

--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -10,7 +10,7 @@
             padding-bottom: 20px;
            }
     </style>
-    <link rel="stylesheet" href="intro.css">
+    <link rel="stylesheet" href="style01.css">
 </head>
 <body bgcolor="lightgray">
     <div class="root">
