--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -2,24 +2,29 @@
 <html lang="en">
 <head>
     <title>whatistinkerhub</title>
-    <style>
-        .root{
-            background-color: rgb(184, 192, 170);
-            width: 100%;
-            height: 100%;
-            padding-bottom: 20px;
-           }
-    </style>
     <link rel="stylesheet" href="style01.css">
 </head>
 <body bgcolor="lightgray">
     <div class="root">
-        <div class="body">
+        <div class="heading">
             <h1>Hai Folks welcome to Tinkerhub AWH Chapter</h1>
         </div>
         <h1>Tinkerhub</h1>
         <p>We are a community of tinkerers, makers, policy geeks & students and are working towards
              mapping and empowering people who share a passion to innovate</p>
+        <div class="sample">
+            <h1>hai</h1>
+        </div>
+        
+        <div class="leftdiv01">   
+            <h3>Why we exist</h3>
+        </div>
+        <div class="rightdiv01">
+            <p>The worwidthld is changing, and we want India to be ready. We're here to 
+                make sure that everyone has access to the
+                 knowledge required to set the course for a better future.</p>
+        </div>
+        
     </div>
 </body>
 </html>
