--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>whatistinkerhub</title>
     <link rel="stylesheet" href="style01.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body bgcolor="lightgray">
     <div class="root">
@@ -10,12 +11,10 @@
             <h1>Hai Folks welcome to Tinkerhub AWH Chapter</h1>
         </div>
         <h1>Tinkerhub</h1>
-        <p>We are a community of tinkerers, makers, policy geeks & students and are working towards
-             mapping and empowering people who share a passion to innovate</p>
-        <div class="sample">
-            <h1>hai</h1>
-        </div>
-        
+        <p>  
+            We are a community of tinkerers, makers, policy geeks & students and are working towards
+             mapping and empowering people who share a passion to innovate
+        </p>        
         <div class="leftdiv01">   
             <h3>Why we exist</h3>
         </div>
@@ -24,7 +23,17 @@
                 make sure that everyone has access to the
                  knowledge required to set the course for a better future.</p>
         </div>
-        
+        <center>
+            <div class="links_onboard">
+                <h3>Hai Folks let's get startted</h3><br>
+                <h4>Tinkerhub Onboarding</h4>
+                <a href="https://tinkerhub.org/" target="_blank">Tinkerhub Foundation Website</a><br>
+                <a href="https://join.tinkerhub.org/" target="_blank">Tinkerhub Discord</a><br>
+                <a href="#" target="_blank">Tinkerhub AWH Discord</a><br>
+                <a href="https://t.me/+U2IJ2xdDfjc0ZTU1" target="_blank">Tinkerhub AWH Telegram channel</a><br>
+            </div>
+        </center>
+
     </div>
 </body>
 </html>
