--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>whatistinkerhub</title>
-    <link rel="stylesheet" href="style01.css">
+    <link rel="stylesheet" href="CSS/style01.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body bgcolor="lightgray">
@@ -10,7 +10,10 @@
         <div class="heading">
             <h1>Hai Folks welcome to Tinkerhub AWH Chapter</h1>
         </div>
-        <h1>Tinkerhub</h1>
+        <h1>
+            <img src="CSS/logo.png" alt="tinkerhub_logo">
+            Tinkerhub
+        </h1>
         <p>  
             We are a community of tinkerers, makers, policy geeks & students and are working towards
              mapping and empowering people who share a passion to innovate
@@ -29,7 +32,7 @@
                 <h4>Tinkerhub Onboarding</h4>
                 <a href="https://tinkerhub.org/" target="_blank">Tinkerhub Foundation Website</a><br>
                 <a href="https://join.tinkerhub.org/" target="_blank">Tinkerhub Discord</a><br>
-                <a href="#" target="_blank">Tinkerhub AWH Discord</a><br>
+                <a href="#">Tinkerhub AWH Discord</a><br>
                 <a href="https://t.me/+U2IJ2xdDfjc0ZTU1" target="_blank">Tinkerhub AWH Telegram channel</a><br>
             </div>
         </center>
