--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -32,8 +32,7 @@
                 <h4>Tinkerhub Onboarding</h4>
                 <a href="https://tinkerhub.org/" target="_blank">Tinkerhub Foundation Website</a><br>
                 <a href="https://join.tinkerhub.org/" target="_blank">Tinkerhub Discord</a><br>
-                <a href="#">Tinkerhub AWH Discord</a><br>
-                <a href="https://t.me/+U2IJ2xdDfjc0ZTU1" target="_blank">Tinkerhub AWH Telegram channel</a><br>
+                <a href="#">Join Tinkerhub AWH Chapter</a><br>
             </div>
         </center>
 
