--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -32,7 +32,9 @@
                 <h4>Tinkerhub Onboarding</h4>
                 <a href="https://tinkerhub.org/" target="_blank">Tinkerhub Foundation Website</a><br>
                 <a href="https://join.tinkerhub.org/" target="_blank">Tinkerhub Discord</a><br>
-                <a href="#">Join Tinkerhub AWH Chapter</a><br>
+                <a href="https://t.me/+HxgC1fBb6oVjYzll" target="_blank">Tinkerhub AWH Telegram</a><br>
+                <a href="https://discord.gg/tTPXmsb6" target="_blank">Tinkerhub AWH Discord</a><br>
+                <a href="https://forms.gle/wG696wpR4vpQyBWE8" target="_blank">Fill a form</a><br>
             </div>
         </center>
 
