--- a/WhatISTinkerhub/index.html
+++ b/WhatISTinkerhub/index.html
@@ -11,7 +11,7 @@
             <h1>Hai Folks welcome to Tinkerhub AWH Chapter</h1>
         </div>
         <h1>
-            <img src="CSS/logo.png" alt="tinkerhub_logo">
+            <img src="CSS/logo.png" alt="tinkerhub_logo">https://t.me/+HxgC1fBb6oVjYzllhttps://t.me/+HxgC1fBb6oVjYzll
             Tinkerhub
         </h1>
         <p>  
